# atsamd

./: README.md  crates.json
boards/pyruler/: Cargo.toml  Embed.toml  README.md  memory.x  openocd.cfg
boards/pyruler/.cargo/: config
boards/pyruler/examples/: blinky_basic.rs  dotstar.rs  eic.rs  ptc.rs  ptc_regs.rs  pwm.rs  usb_serial.rs  watchdog.rs
boards/pyruler/src/: lib.rs
hal/src/thumbv6m/: ptc.rs
svd/devices/include/: ptc.xsl
