[package]
name = "pyruler"
version = "0.1.0"
authors = ["leo60228 <leo@60228.dev>"]
description = "Board Support crate for the Adafruit PyRuler"
keywords = ["no-std", "arm", "cortex-m", "embedded-hal"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/atsamd-rs/atsamd"
readme = "README.md"

[dependencies]
cortex-m = "0.6.3"
embedded-hal = "0.2.3"
bitbang-hal = "0.3"
apa102-spi = "0.3"
smart-leds = "0.3"
nb = "0.1"

[dependencies.cortex-m-rt]
version = "~0.6.12"
optional = true

[dependencies.atsamd-hal]
version = "0.13"
default-features = false
path = "../../hal"

[dependencies.usb-device]
version = "0.2"
optional = true

[dependencies.usbd-serial]
version = "0.1"
optional = true

[dev-dependencies]
panic-halt = "0.2"
panic-probe = "0.2.0"
rtt-target = { version = "0.3.0", features = ["cortex-m"] }

[features]
# ask the HAL to enable atsamd21e support
default = ["rt", "atsamd-hal/samd21e", "unproven", "usb"]
rt = ["cortex-m-rt", "atsamd-hal/samd21e-rt"]
unproven = ["atsamd-hal/unproven"]
usb = ["atsamd-hal/usb", "usb-device", "usbd-serial"]
use_semihosting = []

# for cargo flash
[package.metadata]
chip = "ATSAMD21E18A"

[[example]]
name = "blinky_basic"

[[example]]
name = "eic"

[[example]]
name = "pwm"
required-features = ["unproven"]

[[example]]
name = "watchdog"
required-features = ["unproven"]

[[example]]
name = "usb_serial"
required-features = ["usb"]

[[example]]
name = "dotstar"
required-features = ["unproven"]

[profile.release]
debug = 1
